# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Colton D. <colton@donn.io>"]
edition = "2021"
repository = "https://github.com/cdmistman/mist"

[workspace.dependencies]
rstest = "0.16.0"
