# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Colton D. <colton@donn.io>"]
edition = "2021"
repository = "https://github.com/cdmistman/mist"

[workspace.dependencies]
pretty_assertions = "1.3.0"
rstest = "0.16.0"
thiserror = "1.0.37"

mist-bytecode = { path = "crates/bytecode" }
