# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace]
members = ["crates/*"]

[workspace.package]
authors = ["Colton D. <colton@donn.io>"]
edition = "2021"
repository = "https://github.com/cdmistman/mist"

[workspace.dependencies]
bigdecimal = "0.3.0"
eyre = "0.6.8"
pretty_assertions = "1.3.0"
rstest = "0.16.0"
string-interner = "0.14.0"
thiserror = "1.0.37"

mist-bytecode = { path = "crates/bytecode" }
mist-syntax.path = "crates/syntax"
mist-types.path = "crates/types"
