[package]
name = "mist-tokens"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num.workspace = true
unicode-xid = "=0.2"

[dev-dependencies]
pretty_assertions.workspace = true
rstest.workspace = true
