[package]
name = "syntax"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest = "2.5.5"
pest_derive = "2.5.5"
rowan = "0.15.10"

[dev-dependencies]
rstest.workspace = true
