[package]
name = "mist-types"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = "5.6.0"
roaring = "0.10.1"
string-interner.workspace = true
thiserror.workspace = true

[dev-dependencies]
pretty_assertions.workspace = true
